--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     border: 0;
@@ -68,7 +67,7 @@ header {
     float: left;
     width: 200px;
     height: 80px;
-    background: url(images/white-Gallery-logo.png) no-repeat center;
+    background: url(/images/white-Gallery-logo.png) no-repeat center;
     background-size: 100%;
     margin-left: 1%;
 }
@@ -82,7 +81,7 @@ nav {
     display: hidden;
     width: 40px;
     height: 40px;
-    background: url(images/menuIcon.png) center;
+    background: url(/images/menuIcon.png) center;
 }
 
 a:hover#icon {
