--- a/css/blogStyles.css
+++ b/css/blogStyles.css
@@ -58,7 +58,7 @@ header lable {
     float: left;
     width: 200px;
     height: 80px;
-    background: url(/images/white-Gallery-logo.png) no-repeat center;
+    background: url(../images/white-Gallery-logo.png) no-repeat center;
     background-size: 100%;
     margin-left: 1%;
 }
@@ -72,7 +72,7 @@ nav {
     display: hidden;
     width: 40px;
     height: 40px;
-    background: url(/images/menuIcon.png) center;
+    background: url(../images/menuIcon.png) center;
 }
 
 a:hover#icon {
@@ -179,7 +179,7 @@ section {
 
 #search_button {
     border: 0 none;
-    background: #405580 url(/images/search.png) center no-repeat;
+    background: #405580 url(../images/search.png) center no-repeat;
     width: 20%;
     float: left;
     padding: 0;
